--- a/templates/WebApp/map_fullscreen.html
+++ b/templates/WebApp/map_fullscreen.html
@@ -35,7 +35,7 @@
             width: 0;
             position: fixed;
             z-index: 100;
-            top: 115px;
+            {#top: 115px;#}
             left: 0;
             background-color: white;
             overflow-x: hidden;
@@ -119,7 +119,7 @@
                         <div id="collapseOne" class="accordion-collapse collapse show"
                              aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                             <div class="accordion-body">
-                                <div style="padding-left: 30px;margin-top: 15px">
+                                <div style="padding-left: 30px;margin-top: 15px;margin-bottom: 10px;">
                                     <div class="d-inline-flex">
                                         <input class="form-check-input" id="chirps_full" type="checkbox"/>
 
