--- a/templates/WebApp/map_from_GEE.html
+++ b/templates/WebApp/map_from_GEE.html
@@ -253,31 +253,11 @@
                 </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col-lg-12 mb-4">
-                <div class="card shadow mb-4">
-                    <div class="card-header py-3">
-                        <h6 class="m-0 font-weight-bold text-primary">Modifying this page</h6>
-                    </div>
-                    <div class="card-body">
-                        <div class="alert alert-info">
-                            <ul>
-                                <li><strong>templates/WebApp/map_from_GEE.html</strong> contains the HTML code
-                                    to modify
-                                    the text and graphics in this page.
-                                </li>
-                                <li><strong>staticfiles/js/map_from_GEE.js</strong> controls the behavior of the
-                                    map.
-                                </li>
-                                <br>
-                                The code for this application is available <a
-                                    href="https://github.com/SERVIR/AppTemplate2022">here</a>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+        <button type="button" class="btn btn-info" data-bs-toggle="modal"
+                data-bs-target="#geeModal">
+            Click here to modify the page
+        </button>
 
     </div>
+    {% include 'WebApp/gee_about.html' %}
 {% endblock %}
