--- a/WebApp/static/css/basic.css
+++ b/WebApp/static/css/basic.css
@@ -12163,3 +12163,22 @@ body.sidebar-toggled footer.sticky-footer {
     width: 100%;
     height: 100%;
 }
+
+#title_class {
+    padding-top: 1.5rem;
+    width: 75%;
+    margin: auto;
+    font-size: 2.5rem;
+    font-family: Arial, serif;
+    text-shadow: black 0.1em 0.1em 0.2em;
+
+}
+
+#tagline_class {
+    padding-top: 1.5rem;
+    width: 75%;
+    margin: auto;
+    font-size: 1.2rem;
+    font-family: Arial, serif;
+    text-shadow: black 0.1em 0.1em 0.2em;
+}
