--- a/templates/WebApp/home_about.html
+++ b/templates/WebApp/home_about.html
@@ -1,6 +1,6 @@
 {% block content %}
     <div class="modal fade" id="homeModal" tabindex="-1" aria-labelledby="homeModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+        <div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable">
             <div class="modal-content">
                 <div class="modal-header">
                     <h1 class="modal-title fs-5" id="homeModalLabel">About this page</h1>
