--- a/templates/WebApp/chart_from_ClimateSERV.html
+++ b/templates/WebApp/chart_from_ClimateSERV.html
@@ -46,11 +46,14 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <button type="button" class="btn btn-info" data-bs-toggle="modal"
+            <div class="col">
+                   <button type="button" class="btn btn-info" data-bs-toggle="modal"
                 data-bs-target="#cservModal">
-            Click here to modify the page
+            Learn how to modify this page
         </button>
+                </div>
+        </div>
+ <br>
     </div>
 
     <script src="{% static '/js/chart_from_ClimateSERV.js' %}"></script>
