--- a/templates/WebApp/cserv_about.html
+++ b/templates/WebApp/cserv_about.html
@@ -1,7 +1,7 @@
 {% block content %}
     {% load static %}
     <div class="modal fade" id="cservModal" tabindex="-1" aria-labelledby="cservModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable">
+        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
             <div class="modal-content">
                 <div class="modal-header">
                     <h1 class="modal-title fs-5" id="cservModalLabel">About this page</h1>
