--- a/templates/WebApp/fullscreen_about.html
+++ b/templates/WebApp/fullscreen_about.html
@@ -1,6 +1,6 @@
 {% block content %}
     <div class="modal fade" id="fullModal" tabindex="-1" aria-labelledby="fullModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable">
+        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
             <div class="modal-content">
                 <div class="modal-header">
                     <h1 class="modal-title fs-5" id="fullModalLabel">About this page</h1>
