--- a/templates/WebApp/home.html
+++ b/templates/WebApp/home.html
@@ -49,7 +49,7 @@
 
             <!-- Page Heading -->
             <div class="row" style="display: flex;flex-flow:row wrap;justify-content:center;box-shadow: black">
-                <div class="app-card mb-4" style="height: 30vh;width:40vh;">
+                <div class="app-card mb-4" style="height: 300px;width:400px;">
                     <br>
                     <!-- Illustrations -->
                     <div class="card shadow mb-4 mr-4 h-100 img-thumbnail">
@@ -64,7 +64,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="app-card mb-4" style="height: 30vh;width:40vh;">
+                <div class="app-card mb-4" style="height: 300px;width:400px;">
                     <br>
                     <!-- Illustrations -->
                     <div class="card shadow mb-4 mr-4 h-100 img-thumbnail">
@@ -80,7 +80,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="app-card mb-4" style="height: 30vh;width:40vh;">
+                <div class="app-card mb-4" style="height: 300px;width:400px;">
                     <br>
                     <!-- Illustrations -->
                     <div class="card shadow mb-4  mr-4 h-100 img-thumbnail">
@@ -97,7 +97,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="app-card mb-4" style="height: 30vh;width:40vh;">
+                <div class="app-card mb-4" style="height: 300px;width:400px;">
                     <br>
                     <!-- Illustrations -->
                     <div class="card shadow mb-4  mr-4 h-100 img-thumbnail">
@@ -116,12 +116,12 @@
                 </div>
                 {#                </div>#}
                 {#                <div class="row">#}
-                <div class="app-card mb-4" style="height: 30vh;width:40vh;">
+                <div class="app-card mb-4" style="height: 300px;width:400px;">
                     <br>
                     <!-- Illustrations -->
                     <div class="card shadow mb-4  mr-4 h-100 img-thumbnail">
                         <div class="card-header py-3">
-                            <h6 class="m-0 font-weight-bold text-primary">Chart from ClimaSERV API</h6>
+                            <h6 class="m-0 font-weight-bold text-primary">Chart from ClimateSERV API</h6>
                         </div>
                         <div class="card-body"
                              style="background: url({% static "images/cards/ClimateSERV.jpg" %});background-size: cover;">
@@ -133,7 +133,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="app-card mb-4" style="height: 30vh;width:40vh;">
+                <div class="app-card mb-4" style="height: 300px;width:400px;">
                     <br>
                     <!-- Illustrations -->
                     <div class="card shadow mb-4   mr-4 h-100 img-thumbnail">
@@ -150,7 +150,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="app-card" style="height: 30vh;width:40vh;">
+                <div class="app-card" style="height: 300px;width:400px;">
                     <br>
                     <!-- Illustrations -->
                     <div class="card shadow mb-4  mr-4  h-100 img-thumbnail">
@@ -196,12 +196,13 @@
 
 
             </div>
-            <div class="col-3 mb-3">
+            <div class="col">
                 <button type="button" class="btn btn-info" data-bs-toggle="modal"
                         data-bs-target="#homeModal">
-                    Click here to modify the page
+                    Learn how to modify this page
                 </button>
             </div>
+            <br>
         </div>
     </div>
     <!-- End of Main Content -->
