--- a/templates/WebApp/map_from_GEE.html
+++ b/templates/WebApp/map_from_GEE.html
@@ -227,7 +227,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-lg-12 mb-4">
+            <div class="col-lg-12">
                 <div class="card shadow mb-4">
                     <div class="card-header py-3">
                         <h6 class="m-0 font-weight-bold text-primary">About GEE</h6>
@@ -251,12 +251,19 @@
                         </div>
                     </div>
                 </div>
+
             </div>
-        </div>
+            <div class="col">
         <button type="button" class="btn btn-info" data-bs-toggle="modal"
                 data-bs-target="#geeModal">
-            Click here to modify the page
+            Learn how to modify this page
         </button>
+          </div>
+
+
+        </div>
+
+        <br>
 
     </div>
     {% include 'WebApp/gee_about.html' %}
