--- a/templates/WebApp/map_fullscreen.html
+++ b/templates/WebApp/map_fullscreen.html
@@ -236,7 +236,7 @@
                 <div class="m-auto text-center">
                     <button type="button" class="btn btn-info" data-bs-toggle="modal"
                             data-bs-target="#fullModal">
-                        Modify the page
+                        Learn how to modify this page
                     </button>
 
                 </div>
