--- a/templates/WebApp/sqlite_about.html
+++ b/templates/WebApp/sqlite_about.html
@@ -1,9 +1,9 @@
 {% block content %}
-    <div class="modal fade" id="geeModal" tabindex="-1" aria-labelledby="geeModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable">
+    <div class="modal fade" id="sqliteModal" tabindex="-1" aria-labelledby="sqliteModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h1 class="modal-title fs-5" id="geeModalLabel">About this page</h1>
+                    <h1 class="modal-title fs-5" id="sqliteModalLabel">About this page</h1>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
