--- a/templates/WebApp/update_datamodel.html
+++ b/templates/WebApp/update_datamodel.html
@@ -59,10 +59,15 @@
                 {% endif %}
             </div>
         </div>
+    <div class="row">
+    <div class="col">
         <button type="button" class="btn btn-info" data-bs-toggle="modal"
                 data-bs-target="#datamodelModal">
-            Click here to modify the page
+            Learn how to modify this page
         </button>
+        </div>
+        </div>
+    <br>
         <script src="{% static '/js/update_datamodel.js' %}"></script>
 
     </div>
