--- a/templates/WebApp/chart_from_SQLite.html
+++ b/templates/WebApp/chart_from_SQLite.html
@@ -46,12 +46,18 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <button type="button" class="btn btn-info" data-bs-toggle="modal"
+            <div class="col">
+                        <button type="button" class="btn btn-info" data-bs-toggle="modal"
                 data-bs-target="#sqliteModal">
-            Click here to modify the page
+            Learn how to modify this page
         </button>
+            </div>
+        </div>
+    <br>
+
     </div>
 
     <script src="{% static '/js/chart_from_SQLite.js' %}"></script>
+        {% include 'WebApp/sqlite_about.html' %}
+
 {% endblock %}
