div width in fullscreen

--- a/templates/WebApp/map_fullscreen.html
+++ b/templates/WebApp/map_fullscreen.html
@@ -233,7 +233,7 @@
                     </div>
                 </div>
                 <br>
-                <div class="m-auto text-center">
+                <div class="m-auto w-75 text-center">
                     <button type="button" class="btn btn-info" data-bs-toggle="modal"
                             data-bs-target="#fullModal">
                         Learn how to modify this page
