--- a/templates/WebApp/home.html
+++ b/templates/WebApp/home.html
@@ -24,8 +24,8 @@
                 >
                 <div class="layer">
                 </div>
-                <div class="card-img-overlay">
-                    <div class="text-center text-white align-content-center">
+                <div class="card-img-overlay ">
+                    <div class="text-center text-white vertical_center">
                         <p id="title_class">
                             SERVIR
                             Geospatial Application Template 2022 </p>
